@@ -1,3 +1,8 @@
+2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-13-14
+	* add '/customWebPage' to WebGUI
+
 2007-12-20  Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V00-13-13
